[#113] Fixed scrollbar bug on player details card

--- a/src/components/players/details/card/index.module.scss
+++ b/src/components/players/details/card/index.module.scss
@@ -1,7 +1,7 @@
 @import 'src/scss/variables.scss';
 
 .card {
-  min-width: 440px;
+  min-width: calc(440px - 28px);
   padding-top: 5px;
   background-color: $white;
   font-family: arial;
